--- a/ui/EditIdeaUnitUI.ui
+++ b/ui/EditIdeaUnitUI.ui
@@ -243,7 +243,7 @@
    </column>
    <column>
     <property name="text">
-     <string>Member Count</string>
+     <string>Party Count</string>
     </property>
    </column>
   </widget>
