--- a/ui/EditMainUI.ui
+++ b/ui/EditMainUI.ui
@@ -64,7 +64,7 @@
     <string>Close</string>
    </property>
   </widget>
-  <widget class="QTableWidget" name="member_list">
+  <widget class="QTableWidget" name="party_list">
    <property name="geometry">
     <rect>
      <x>420</x>
