--- a/ui/EditAcptFactTimeUI.ui
+++ b/ui/EditAcptFactTimeUI.ui
@@ -10,7 +10,7 @@
     <height>253</height>
    </rect>
   </property>
-  <property name="windowTitle">
+  <property name="windowTag">
    <string>Form</string>
   </property>
   <widget class="QComboBox" name="curr_year">
