--- a/ui/EditProblemUI.ui
+++ b/ui/EditProblemUI.ui
@@ -10,7 +10,7 @@
     <height>712</height>
    </rect>
   </property>
-  <property name="windowTitle">
+  <property name="windowTag">
    <string>Form</string>
   </property>
   <widget class="QLabel" name="label_3">
