--- a/ui/EditPartyUI.ui
+++ b/ui/EditPartyUI.ui
@@ -10,7 +10,7 @@
     <height>771</height>
    </rect>
   </property>
-  <property name="windowTitle">
+  <property name="windowTag">
    <string>Form</string>
   </property>
   <widget class="QPushButton" name="party_insert_button">
