--- a/ui/economyMainUI.ui
+++ b/ui/economyMainUI.ui
@@ -10,7 +10,7 @@
     <height>750</height>
    </rect>
   </property>
-  <property name="windowTitle">
+  <property name="windowTag">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
@@ -160,7 +160,7 @@
      <string>Add new Economy</string>
     </property>
    </widget>
-   <widget class="QLineEdit" name="economy_title">
+   <widget class="QLineEdit" name="economy_tag">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -622,7 +622,7 @@
      </property>
     </column>
    </widget>
-   <widget class="QComboBox" name="economy_title_combo">
+   <widget class="QComboBox" name="economy_tag_combo">
     <property name="geometry">
      <rect>
       <x>20</x>
@@ -943,7 +943,7 @@
     <string>General Operations</string>
    </property>
    <widget class="QMenu" name="file_menu">
-    <property name="title">
+    <property name="tag">
      <string>File</string>
     </property>
     <addaction name="fm_new"/>
