--- a/ui/EditParty2bdUI.ui
+++ b/ui/EditParty2bdUI.ui
@@ -10,7 +10,7 @@
     <height>829</height>
    </rect>
   </property>
-  <property title="windowTag">
+  <property title="windowkind">
    <string>Form</string>
   </property>
   <widget class="QPushButton" title="bd_add_button">
