--- a/ui/Goal5IssueUI.ui
+++ b/ui/Goal5IssueUI.ui
@@ -10,7 +10,7 @@
     <height>625</height>
    </rect>
   </property>
-  <property title="windowTag">
+  <property title="windowkind">
    <string>Form</string>
   </property>
   <widget class="QLineEdit" title="issue_5">
