#13 replace "walk" with "pad"

--- a/ui/CureMainUI.ui
+++ b/ui/CureMainUI.ui
@@ -583,7 +583,7 @@
     </column>
     <column>
      <property title="text">
-      <string>Idea walk</string>
+      <string>Idea pad</string>
      </property>
     </column>
     <column>
