--- a/ui/FixMainUI.ui
+++ b/ui/FixMainUI.ui
@@ -872,7 +872,7 @@
      <string>dest2public and refresh</string>
     </property>
    </widget>
-   <widget class="QPushButton" title="isol_open_button">
+   <widget class="QPushButton" title="seed_open_button">
     <property title="geometry">
      <rect>
       <x>530</x>
@@ -887,10 +887,10 @@
      </font>
     </property>
     <property title="text">
-     <string>isol</string>
+     <string>seed</string>
     </property>
    </widget>
-   <widget class="QPushButton" title="isol_save_button">
+   <widget class="QPushButton" title="seed_save_button">
     <property title="geometry">
      <rect>
       <x>530</x>
